新增捐款二维码

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
       <h2>联系我们</h2>
       <p>邮箱: muyu.zhouyu@outlook.com</p>
       <p>微信: zhuzhubaqi</p>
+      <img class="donate-img" src="assets/alipay.jpg" alt="支付宝二维码" />
     </section>
 
     <!-- Footer -->
