--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HearAI - 英语听力练习</title>
+    <title>HearAI - 嗨儿</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -11,7 +11,7 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="assets/logo_48.png" alt="HearAI Logo" />
+          <img src="assets/logo_108.png" alt="HearAI Logo" />
           <span>HearAI</span>
         </div>
         <ul class="nav-links">
@@ -55,7 +55,7 @@
       <div class="download-buttons">
         <!-- Android: Google Play -->
         <a
-          href="https://play.google.com/store/apps/details?id=com.zhuzhu66.voicelearning"
+          href="https://play.google.com/store/apps/details?id=com.zhuzhu66.hearai"
           target="_blank"
           class="store-btn android-btn"
         >
