介绍新功能

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <header>
       <nav class="navbar">
         <div class="logo">
-          <img src="assets/logo_108.png" alt="HearAI Logo" />
           <span>HearAI</span>
         </div>
         <ul class="nav-links">
@@ -25,7 +24,7 @@
     <!-- Hero -->
     <section class="hero">
       <h1>HearAI</h1>
-      <p>通过 AI 生成句子练习听力，随时随地提高你的英语水平</p>
+      <p>通过生成式 AI 大模型提供无限资料练习听力，随时随地提高你的英语水平</p>
       <a href="#download" class="btn">立即体验</a>
     </section>
 
@@ -35,11 +34,15 @@
       <div class="feature-grid">
         <div class="feature-card">
           <h3>无限听力资源</h3>
-          <p>不定时推送AI大模型生成的句子，无限提供学习资源。</p>
+          <p>不定时推送 AI 大模型生成的句子，无限提供学习资源。</p>
+        </div>
+        <div class="feature-card">
+          <h3>多个语音大模型</h3>
+          <p>每个句子均提供多种不同音色的发音，不再只能听懂一种声音。</p>
         </div>
         <div class="feature-card">
           <h3>渐进式学习法</h3>
-          <p>听觉优先、逐步辅助的沉浸式学习方法。</p>
+          <p>听觉优先、逐步唤醒沉睡记忆的渐进式学习方法。</p>
         </div>
         <div class="feature-card">
           <h3>记忆模型强化</h3>
@@ -122,6 +125,13 @@
       <h2>联系我们</h2>
       <p>邮箱: muyu.zhouyu@outlook.com</p>
       <p>微信: zhuzhubaqi</p>
+    </section>
+
+    <!-- Contact -->
+    <section id="donate" class="contact">
+      <h2>捐赠</h2>
+      <p>捐赠无论多少，均可进入内部微信群</p>
+      <p>推进开发进度</p>
       <img class="donate-img" src="assets/alipay.jpg" alt="支付宝二维码" />
     </section>
 
