--- a/index.html
+++ b/index.html
@@ -117,6 +117,30 @@
           </svg>
           <span>App Store 下载</span>
         </a>
+
+        <!-- Chrome Extension -->
+        <a
+          href="https://www.baidu.com"
+          target="_blank"
+          class="store-btn chrome-btn"
+          ><svg
+            t="1764745978656"
+            class="icon"
+            viewBox="0 0 1024 1024"
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            p-id="4771"
+            width="24"
+            height="24"
+          >
+            <path
+              d="M291.2 454.4l-128-220.8C243.2 131.2 371.2 64 512 64c163.2 0 307.2 89.6 384 220.8H512c-105.6-3.2-195.2 70.4-220.8 169.6zM672 348.8h256c19.2 51.2 32 105.6 32 163.2 0 246.4-198.4 444.8-441.6 448l182.4-316.8c25.6-38.4 41.6-83.2 41.6-131.2 0-64-28.8-121.6-70.4-163.2zM348.8 512c0-89.6 73.6-163.2 163.2-163.2s163.2 73.6 163.2 163.2-73.6 163.2-163.2 163.2-163.2-73.6-163.2-163.2z m224 220.8l-128 220.8C230.4 921.6 64 736 64 512c0-80 22.4-153.6 57.6-220.8L304 608c35.2 76.8 115.2 131.2 208 131.2 22.4 3.2 41.6 0 60.8-6.4z"
+              fill="#040000"
+              p-id="4772"
+            ></path>
+          </svg>
+          <span>Chrome 插件下载</span>
+        </a>
       </div>
     </section>
 
@@ -130,14 +154,14 @@
     <!-- Contact -->
     <section id="donate" class="contact">
       <h2>捐赠</h2>
-      <p>捐赠无论多少，均可进入内部微信群</p>
+      <p>😝</p>
       <p>推进开发进度</p>
       <img class="donate-img" src="assets/alipay.jpg" alt="支付宝二维码" />
     </section>
 
     <!-- Footer -->
     <footer>
-      <p>© 2025 猪猪. All Rights Reserved.</p>
+      <p>© 2025 zhuzhu</p>
     </footer>
   </body>
 </html>
