--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
           <li><a href="#features">功能</a></li>
           <li><a href="#download">下载</a></li>
           <li><a href="#contact">联系我们</a></li>
+          <li>
+            <a href="https://github.com/muyu66/hear-ai-flutter" target="_blank"
+              >Github</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
@@ -57,11 +62,7 @@
       <p>支持 Android 和 iOS，快速安装，立即开始学习。</p>
       <div class="download-buttons">
         <!-- Android: Google Play -->
-        <a
-          href="https://play.google.com/store/apps/details?id=com.zhuzhu66.hearai"
-          target="_blank"
-          class="store-btn android-btn"
-        >
+        <a href="#" class="store-btn android-btn">
           <!-- Google Play SVG -->
           <svg
             t="1763803125223"
@@ -94,15 +95,37 @@
               p-id="8219"
             ></path>
           </svg>
-          <span>Google Play 下载</span>
+          <span>Android 直接下载</span>
         </a>
 
-        <!-- iOS: App Store -->
+        <!-- 百度网盘 -->
         <a
-          href="https://apps.apple.com/app/YOUR_APP_ID"
+          href="https://pan.baidu.com/s/17oDbJaug46M7rjIK5MenBA?pwd=zhu6"
           target="_blank"
           class="store-btn ios-btn"
         >
+          <!-- 百度网盘 SVG -->
+          <svg
+            t="1765691554659"
+            class="icon"
+            viewBox="0 0 1024 1024"
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            p-id="5367"
+            width="24"
+            height="24"
+          >
+            <path
+              d="M513.4656 485.333333a134.656 134.656 0 1 0 0-269.354666 134.656 134.656 0 0 0 0 269.354666z m192 48.469334a266.922667 266.922667 0 0 1-24.277333 22.485333l-271.701334 271.701333-1.28-1.237333A248.021333 248.021333 0 1 1 250.9376 389.333333a265.344 265.344 0 1 1 525.056 0h0.128a248.021333 248.021333 0 1 1-162.133333 435.626667 61.354667 61.354667 0 0 1 80.213333-92.757333 125.312 125.312 0 1 0 11.264-198.4zM352.5696 707.669333a123.989333 123.989333 0 1 0-31.274667 32.128l-0.426666-0.426666 31.701333-31.701334z"
+              fill="#2c2c2c"
+              p-id="5368"
+            ></path>
+          </svg>
+          <span>百度网盘下载</span>
+        </a>
+
+        <!-- iOS: App Store -->
+        <a href="#" class="store-btn ios-btn">
           <!-- Apple SVG -->
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -120,7 +143,7 @@
 
         <!-- Chrome Extension -->
         <a
-          href="https://www.baidu.com"
+          href="./downloads/hearai-chrome-plugin-1.0.crx"
           target="_blank"
           class="store-btn chrome-btn"
           ><svg
